# llama-stack-client-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .stats.yml  Brewfile  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.md  fix_import_errors.py  ilama_core.py  ilama_gui.py  ilama_logic.py  mypy.ini  pyproject.toml  release-please-config.json  requirements-dev.in  requirements.in  requirements.txt  run_ilama.py  setup.bat  setup2.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  pre-commit.yml  publish-pypi.yml  publish-to-test-pypi.yml  pylint.yml  release-doctor.yml
docs/: cli_reference.md
examples/: README.md  mcp_agent.py
examples/inference/: client.py
examples/memory/: client.py
examples/post_training/: supervised_fine_tune_client.py
examples/safety/: client.py
scripts/: gen_cli_doc.py  lint  test
scripts/open_benchmark/: simpleqa.py
scripts/utils/: upload-artifact.sh
src/llama_stack_client/: __init__.py  _base_client.py  _client.py  _exceptions.py  _files.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py  _wrappers.py  pagination.py
src/llama_stack_client/_utils/: _logs.py  _resources_proxy.py  _sync.py  _typing.py
src/llama_stack_client/lib/: __init__.py  stream_logger.py  stream_printer.py
src/llama_stack_client/lib/agents/: agent.py  client_tool.py  custom_tool.py  event_logger.py  output_parser.py  tool_parser.py
src/llama_stack_client/lib/cli/: __init__.py  configure.py  constants.py  llama_stack_client.py  providers.py  subcommand.py
src/llama_stack_client/lib/direct/: direct.py  test.py
src/llama_stack_client/lib/inference/: event_logger.py  utils.py
src/llama_stack_client/lib/tools/: mcp_oauth.py
src/llama_stack_client/resources/: __init__.py  batch_inference.py  batch_inferences.py  benchmarks.py  completions.py  credentials.py  datasetio.py  datasets.py  embeddings.py  eval_tasks.py  evaluations.py  files.py  health.py  inference.py  inspect.py  inspect_providers_response.py  memory.py  memory_banks.py  models.py  moderations.py  providers.py  responses.py  reward_scoring.py  routes.py  safety.py  scoring.py  scoring_functions.py  shields.py  synthetic_data_generation.py  telemetry.py  tool_runtime.py  toolgroups.py  tools.py  vector_dbs.py  vector_io.py  vector_stores.py  version.py
src/llama_stack_client/resources/agents/: __init__.py  agents.py  session.py  sessions.py  steps.py  turn.py  turns.py
src/llama_stack_client/resources/chat/: chat.py  completions.py
src/llama_stack_client/resources/eval/: __init__.py  eval.py  job.py  jobs.py
src/llama_stack_client/resources/evaluate/: __init__.py  evaluate.py  jobs.py  question_answering.py
src/llama_stack_client/resources/files/: __init__.py  files.py  session.py
src/llama_stack_client/resources/inference/: __init__.py  embeddings.py  inference.py
src/llama_stack_client/resources/memory/: __init__.py  documents.py  memory.py
src/llama_stack_client/resources/openai/: __init__.py  openai.py
src/llama_stack_client/types/: __init__.py  agent.py  agent_config.py  agent_config_param.py  agent_create_params.py  agent_create_response.py  agent_delete_params.py  agent_list_params.py  agent_list_response.py  agent_list_sessions_response.py  agent_retrieve_response.py  aggregation_function_type.py  algorithm_config_param.py  batch_chat_completion.py  batch_inference_chat_completion_params.py  batch_inference_chat_completion_response.py  batch_inference_completion_params.py  batch_inference_completion_response.py  benchmark.py  benchmark_config_param.py  benchmark_list_response.py  benchmark_register_params.py  chat_completion_chunk.py  chat_completion_response.py  chat_completion_response_stream_chunk.py  chat_completion_stream_chunk.py  completion_create_params.py  completion_create_response.py  completion_message.py  completion_message_param.py  completion_response.py  completion_stream_chunk.py  create_embeddings_response.py  create_response.py  credential_create_params.py  credential_create_response.py  credential_retrieve_response.py  data_source.py  data_source_param.py  dataset.py  (+285 more)
tests/: conftest.py  test_client.py  test_deepcopy.py  test_deprecated_inference.py  test_extract_files.py  test_files.py  test_ilama.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  utils.py
tests/api_resources/: test_agents.py  test_batch_inference.py  test_batch_inferences.py  test_benchmarks.py  test_completions.py  test_credentials.py  test_datasetio.py  test_datasets.py  test_embeddings.py  test_eval.py  test_eval_tasks.py  test_evaluate.py  test_evaluations.py  test_files.py  test_health.py  test_inference.py  test_inspect.py  test_memory.py  test_memory_banks.py  test_models.py  test_moderations.py  test_post_training.py  test_providers.py  test_responses.py  test_reward_scoring.py  test_routes.py  test_safety.py  test_scoring.py  test_scoring_functions.py  test_shields.py  test_synthetic_data_generation.py  test_telemetry.py  test_tool_runtime.py  test_toolgroups.py  test_tools.py  test_vector_dbs.py  test_vector_io.py  test_vector_stores.py  test_version.py
tests/api_resources/agents/: test_session.py  test_sessions.py  test_steps.py  test_turn.py  test_turns.py
tests/api_resources/chat/: test_completions.py
tests/api_resources/eval/: test_benchmarks.py  test_job.py  test_jobs.py
tests/api_resources/evaluate/: test_jobs.py  test_question_answering.py
tests/api_resources/files/: test_session.py
tests/api_resources/inference/: test_embeddings.py
tests/api_resources/memory/: test_documents.py
tests/api_resources/openai/: test_v1.py
tests/api_resources/post_training/: test_job.py  test_jobs.py
tests/api_resources/responses/: test_input_items.py
tests/api_resources/telemetry/: test_spans.py  test_traces.py
tests/api_resources/tool_runtime/: test_rag_tool.py
tests/api_resources/vector_stores/: test_files.py
tests/decoders/: test_jsonl.py
tests/test_utils/: test_proxy.py  test_typing.py
(+321 files in other folders)
